--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <link rel="stylesheet" href="style.css"> 
+    <p>COLOR IS AMAZING</p> <link rel="stylesheet" href="style.css"> 
   </head>
   
 <body>
