--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    COLOR IS AMAZING <link rel="stylesheet" href="style.css"> 
+    <title>COLOR IS AMAZING</title> <link rel="stylesheet" href="style.css"> 
   </head>
   
 <body>
