--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   
   <head>
-    <title>WHY COLOR IS GREAT, ESPICALLY WHEN IT BLINDS YOU</title> <link rel="stylesheet" href="style.css"> 
+    <title>WHY COLOR IS GREAT, ESPICALLY WHEN IT BLINDS YOU</title> 
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   
 <body>
